// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BSwitch.vue renders correct variant based on variant props 1`] = `
<div
  class="flex justify-center"
>
  <div
    class="relative inline-block w-12 mr-2 align-middle select-none transition duration-700 ease-in"
  >
    <input
      class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"
      id="toggle"
      type="checkbox"
      value="false"
    />
     
    <div
      class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"
    />
  </div>
   
  <label>
    
    
  
  </label>
</div>
`;

exports[`BSwitch.vue renders correct variant based on variant props 2`] = `
<div
  class="flex justify-center"
  variant="primary"
>
  <div
    class="relative inline-block w-12 mr-2 align-middle select-none transition duration-700 ease-in"
  >
    <input
      class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"
      id="toggle"
      type="checkbox"
      value="false"
    />
     
    <div
      class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"
    />
  </div>
   
  <label>
    
    
  
  </label>
</div>
`;

exports[`BSwitch.vue renders correct variant based on variant props 3`] = `
<div
  class="flex justify-center"
  variant="warning"
>
  <div
    class="relative inline-block w-12 mr-2 align-middle select-none transition duration-700 ease-in"
  >
    <input
      class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"
      id="toggle"
      type="checkbox"
      value="false"
    />
     
    <div
      class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"
    />
  </div>
   
  <label>
    
    
  
  </label>
</div>
`;

exports[`BSwitch.vue renders correct variant based on variant props 4`] = `
<div
  class="flex justify-center"
  variant="danger"
>
  <div
    class="relative inline-block w-12 mr-2 align-middle select-none transition duration-700 ease-in"
  >
    <input
      class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"
      id="toggle"
      type="checkbox"
      value="false"
    />
     
    <div
      class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"
    />
  </div>
   
  <label>
    
    
  
  </label>
</div>
`;

exports[`BSwitch.vue renders correct variant based on variant props 5`] = `
<div
  class="flex justify-center"
  variant="success"
>
  <div
    class="relative inline-block w-12 mr-2 align-middle select-none transition duration-700 ease-in"
  >
    <input
      class="toggle-checkbox absolute block w-6 h-6 rounded-full bg-white border-4 appearance-none cursor-pointer"
      id="toggle"
      type="checkbox"
      value="false"
    />
     
    <div
      class="toggle-label block overflow-hidden h-6 rounded-full bg-gray-300 cursor-pointer"
    />
  </div>
   
  <label>
    
    
  
  </label>
</div>
`;
